--- a/Ch-3.1.ipynb
+++ b/Ch-3.1.ipynb
@@ -129,252 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "6a9afea7-a93a-41c3-8903-a494356c7cb5",
+   "execution_count": 46,
+   "id": "bf1a8133-39d4-4284-9a94-87bfd1abdd0e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1.930595439108887, 3.0188495765048575)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a,b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "f50dfc4e-9696-4cad-83ef-394a25c9e54c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m       \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolyfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdeg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrcond\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfull\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcov\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mCall signature:\u001b[0m  \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolyfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mType:\u001b[0m            _ArrayFunctionDispatcher\n",
-       "\u001b[0;31mString form:\u001b[0m     <function polyfit at 0x10f760b80>\n",
-       "\u001b[0;31mFile:\u001b[0m            /opt/anaconda3/lib/python3.11/site-packages/numpy/lib/polynomial.py\n",
-       "\u001b[0;31mDocstring:\u001b[0m      \n",
-       "Least squares polynomial fit.\n",
-       "\n",
-       ".. note::\n",
-       "   This forms part of the old polynomial API. Since version 1.4, the\n",
-       "   new polynomial API defined in `numpy.polynomial` is preferred.\n",
-       "   A summary of the differences can be found in the\n",
-       "   :doc:`transition guide </reference/routines.polynomials>`.\n",
-       "\n",
-       "Fit a polynomial ``p(x) = p[0] * x**deg + ... + p[deg]`` of degree `deg`\n",
-       "to points `(x, y)`. Returns a vector of coefficients `p` that minimises\n",
-       "the squared error in the order `deg`, `deg-1`, ... `0`.\n",
-       "\n",
-       "The `Polynomial.fit <numpy.polynomial.polynomial.Polynomial.fit>` class\n",
-       "method is recommended for new code as it is more stable numerically. See\n",
-       "the documentation of the method for more information.\n",
-       "\n",
-       "Parameters\n",
-       "----------\n",
-       "x : array_like, shape (M,)\n",
-       "    x-coordinates of the M sample points ``(x[i], y[i])``.\n",
-       "y : array_like, shape (M,) or (M, K)\n",
-       "    y-coordinates of the sample points. Several data sets of sample\n",
-       "    points sharing the same x-coordinates can be fitted at once by\n",
-       "    passing in a 2D-array that contains one dataset per column.\n",
-       "deg : int\n",
-       "    Degree of the fitting polynomial\n",
-       "rcond : float, optional\n",
-       "    Relative condition number of the fit. Singular values smaller than\n",
-       "    this relative to the largest singular value will be ignored. The\n",
-       "    default value is len(x)*eps, where eps is the relative precision of\n",
-       "    the float type, about 2e-16 in most cases.\n",
-       "full : bool, optional\n",
-       "    Switch determining nature of return value. When it is False (the\n",
-       "    default) just the coefficients are returned, when True diagnostic\n",
-       "    information from the singular value decomposition is also returned.\n",
-       "w : array_like, shape (M,), optional\n",
-       "    Weights. If not None, the weight ``w[i]`` applies to the unsquared\n",
-       "    residual ``y[i] - y_hat[i]`` at ``x[i]``. Ideally the weights are\n",
-       "    chosen so that the errors of the products ``w[i]*y[i]`` all have the\n",
-       "    same variance.  When using inverse-variance weighting, use\n",
-       "    ``w[i] = 1/sigma(y[i])``.  The default value is None.\n",
-       "cov : bool or str, optional\n",
-       "    If given and not `False`, return not just the estimate but also its\n",
-       "    covariance matrix. By default, the covariance are scaled by\n",
-       "    chi2/dof, where dof = M - (deg + 1), i.e., the weights are presumed\n",
-       "    to be unreliable except in a relative sense and everything is scaled\n",
-       "    such that the reduced chi2 is unity. This scaling is omitted if\n",
-       "    ``cov='unscaled'``, as is relevant for the case that the weights are\n",
-       "    w = 1/sigma, with sigma known to be a reliable estimate of the\n",
-       "    uncertainty.\n",
-       "\n",
-       "Returns\n",
-       "-------\n",
-       "p : ndarray, shape (deg + 1,) or (deg + 1, K)\n",
-       "    Polynomial coefficients, highest power first.  If `y` was 2-D, the\n",
-       "    coefficients for `k`-th data set are in ``p[:,k]``.\n",
-       "\n",
-       "residuals, rank, singular_values, rcond\n",
-       "    These values are only returned if ``full == True``\n",
-       "\n",
-       "    - residuals -- sum of squared residuals of the least squares fit\n",
-       "    - rank -- the effective rank of the scaled Vandermonde\n",
-       "       coefficient matrix\n",
-       "    - singular_values -- singular values of the scaled Vandermonde\n",
-       "       coefficient matrix\n",
-       "    - rcond -- value of `rcond`.\n",
-       "\n",
-       "    For more details, see `numpy.linalg.lstsq`.\n",
-       "\n",
-       "V : ndarray, shape (M,M) or (M,M,K)\n",
-       "    Present only if ``full == False`` and ``cov == True``.  The covariance\n",
-       "    matrix of the polynomial coefficient estimates.  The diagonal of\n",
-       "    this matrix are the variance estimates for each coefficient.  If y\n",
-       "    is a 2-D array, then the covariance matrix for the `k`-th data set\n",
-       "    are in ``V[:,:,k]``\n",
-       "\n",
-       "\n",
-       "Warns\n",
-       "-----\n",
-       "RankWarning\n",
-       "    The rank of the coefficient matrix in the least-squares fit is\n",
-       "    deficient. The warning is only raised if ``full == False``.\n",
-       "\n",
-       "    The warnings can be turned off by\n",
-       "\n",
-       "    >>> import warnings\n",
-       "    >>> warnings.simplefilter('ignore', np.RankWarning)\n",
-       "\n",
-       "See Also\n",
-       "--------\n",
-       "polyval : Compute polynomial values.\n",
-       "linalg.lstsq : Computes a least-squares fit.\n",
-       "scipy.interpolate.UnivariateSpline : Computes spline fits.\n",
-       "\n",
-       "Notes\n",
-       "-----\n",
-       "The solution minimizes the squared error\n",
-       "\n",
-       ".. math::\n",
-       "    E = \\sum_{j=0}^k |p(x_j) - y_j|^2\n",
-       "\n",
-       "in the equations::\n",
-       "\n",
-       "    x[0]**n * p[0] + ... + x[0] * p[n-1] + p[n] = y[0]\n",
-       "    x[1]**n * p[0] + ... + x[1] * p[n-1] + p[n] = y[1]\n",
-       "    ...\n",
-       "    x[k]**n * p[0] + ... + x[k] * p[n-1] + p[n] = y[k]\n",
-       "\n",
-       "The coefficient matrix of the coefficients `p` is a Vandermonde matrix.\n",
-       "\n",
-       "`polyfit` issues a `RankWarning` when the least-squares fit is badly\n",
-       "conditioned. This implies that the best fit is not well-defined due\n",
-       "to numerical error. The results may be improved by lowering the polynomial\n",
-       "degree or by replacing `x` by `x` - `x`.mean(). The `rcond` parameter\n",
-       "can also be set to a value smaller than its default, but the resulting\n",
-       "fit may be spurious: including contributions from the small singular\n",
-       "values can add numerical noise to the result.\n",
-       "\n",
-       "Note that fitting polynomial coefficients is inherently badly conditioned\n",
-       "when the degree of the polynomial is large or the interval of sample points\n",
-       "is badly centered. The quality of the fit should always be checked in these\n",
-       "cases. When polynomial fits are not satisfactory, splines may be a good\n",
-       "alternative.\n",
-       "\n",
-       "References\n",
-       "----------\n",
-       ".. [1] Wikipedia, \"Curve fitting\",\n",
-       "       https://en.wikipedia.org/wiki/Curve_fitting\n",
-       ".. [2] Wikipedia, \"Polynomial interpolation\",\n",
-       "       https://en.wikipedia.org/wiki/Polynomial_interpolation\n",
-       "\n",
-       "Examples\n",
-       "--------\n",
-       ">>> import warnings\n",
-       ">>> x = np.array([0.0, 1.0, 2.0, 3.0,  4.0,  5.0])\n",
-       ">>> y = np.array([0.0, 0.8, 0.9, 0.1, -0.8, -1.0])\n",
-       ">>> z = np.polyfit(x, y, 3)\n",
-       ">>> z\n",
-       "array([ 0.08703704, -0.81349206,  1.69312169, -0.03968254]) # may vary\n",
-       "\n",
-       "It is convenient to use `poly1d` objects for dealing with polynomials:\n",
-       "\n",
-       ">>> p = np.poly1d(z)\n",
-       ">>> p(0.5)\n",
-       "0.6143849206349179 # may vary\n",
-       ">>> p(3.5)\n",
-       "-0.34732142857143039 # may vary\n",
-       ">>> p(10)\n",
-       "22.579365079365115 # may vary\n",
-       "\n",
-       "High-order polynomials may oscillate wildly:\n",
-       "\n",
-       ">>> with warnings.catch_warnings():\n",
-       "...     warnings.simplefilter('ignore', np.RankWarning)\n",
-       "...     p30 = np.poly1d(np.polyfit(x, y, 30))\n",
-       "...\n",
-       ">>> p30(4)\n",
-       "-0.80000000000000204 # may vary\n",
-       ">>> p30(5)\n",
-       "-0.99999999999999445 # may vary\n",
-       ">>> p30(4.5)\n",
-       "-0.10547061179440398 # may vary\n",
-       "\n",
-       "Illustration:\n",
-       "\n",
-       ">>> import matplotlib.pyplot as plt\n",
-       ">>> xp = np.linspace(-2, 6, 100)\n",
-       ">>> _ = plt.plot(x, y, '.', xp, p(xp), '-', xp, p30(xp), '--')\n",
-       ">>> plt.ylim(-2,2)\n",
-       "(-2, 2)\n",
-       ">>> plt.show()\n",
-       "\u001b[0;31mClass docstring:\u001b[0m\n",
-       "Class to wrap functions with checks for __array_function__ overrides.\n",
-       "\n",
-       "All arguments are required, and can only be passed by position.\n",
-       "\n",
-       "Parameters\n",
-       "----------\n",
-       "dispatcher : function or None\n",
-       "    The dispatcher function that returns a single sequence-like object\n",
-       "    of all arguments relevant.  It must have the same signature (except\n",
-       "    the default values) as the actual implementation.\n",
-       "    If ``None``, this is a ``like=`` dispatcher and the\n",
-       "    ``_ArrayFunctionDispatcher`` must be called with ``like`` as the\n",
-       "    first (additional and positional) argument.\n",
-       "implementation : function\n",
-       "    Function that implements the operation on NumPy arrays without\n",
-       "    overrides.  Arguments passed calling the ``_ArrayFunctionDispatcher``\n",
-       "    will be forwarded to this (and the ``dispatcher``) as if using\n",
-       "    ``*args, **kwargs``.\n",
-       "\n",
-       "Attributes\n",
-       "----------\n",
-       "_implementation : function\n",
-       "    The original implementation passed in."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "np.polyfit?"
+    "# 11-06-2024\n",
+    "# Standard Error \n",
+    "\n",
+    "# SE = SD^2/n This tell how far is the sample mean from the actual population mean"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf1a8133-39d4-4284-9a94-87bfd1abdd0e",
+   "id": "fd90b18d-741f-401c-b6ab-d316c8e3e75d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "PG 75s"
+   ]
   }
  ],
  "metadata": {
