--- a/Ch-3.1.ipynb
+++ b/Ch-3.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "24afb685-abe1-41de-bd65-3253d8c7b19c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "38dd7eec-6066-44c7-9810-b12cbb1cb5b8",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "2fbd2766-613a-4290-badf-121f0c37719a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "id": "0e79c9c4-c2be-4177-81c9-a1117cde6a19",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "35ed1833-f523-4e97-8246-ef9f42578123",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "269a8566-bed8-420c-87fc-c284a0d9a136",
    "metadata": {},
    "outputs": [],
@@ -71,17 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "id": "1cfe2df9-c396-4607-a146-77596a3c2e08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x169562290>"
+       "<matplotlib.collections.PathCollection at 0x16dd83350>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "id": "2ad281a7-8631-402e-b894-683519bb5bf5",
    "metadata": {},
    "outputs": [
@@ -123,13 +123,13 @@
    "source": [
     "fig, ax = plt.subplots(figsize=(15,5), nrows=1, ncols=1)\n",
     "ax.scatter(X,Y, alpha= 0.7, s = 60, edgecolors=\"k\")\n",
-    "b, a = np.polyfit(X, Y, deg=1)\n",
-    "ax.plot(X, a+b*X, lw = \"2.5\");"
+    "slope, intercept = np.polyfit(X, Y, deg=1)\n",
+    "ax.plot(X, slope*X+ intercept, lw = \"2.5\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "id": "bf1a8133-39d4-4284-9a94-87bfd1abdd0e",
    "metadata": {},
    "outputs": [],
@@ -142,12 +142,616 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "fd90b18d-741f-401c-b6ab-d316c8e3e75d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0188495765048575"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the confidence interval \n",
+    "# intercept B0\n",
+    "\n",
+    "B0 = intercept\n",
+    "B0\n",
+    "B1 = slope\n",
+    "B1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2ea43d1b-f43d-449e-84be-c520f6381189",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 0.0)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Standard Error of B0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "b024b91e-a90d-451b-bd45-dd5c73037a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.511822</td>\n",
+       "      <td>3.868278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.950464</td>\n",
+       "      <td>4.200110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.144160</td>\n",
+       "      <td>3.294924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.948649</td>\n",
+       "      <td>4.720356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.311831</td>\n",
+       "      <td>3.604648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>0.421189</td>\n",
+       "      <td>3.305269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0.105921</td>\n",
+       "      <td>0.700296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0.633160</td>\n",
+       "      <td>5.009118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>0.380424</td>\n",
+       "      <td>3.309379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>0.725294</td>\n",
+       "      <td>4.724287</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           X         Y\n",
+       "0   0.511822  3.868278\n",
+       "1   0.950464  4.200110\n",
+       "2   0.144160  3.294924\n",
+       "3   0.948649  4.720356\n",
+       "4   0.311831  3.604648\n",
+       "..       ...       ...\n",
+       "95  0.421189  3.305269\n",
+       "96  0.105921  0.700296\n",
+       "97  0.633160  5.009118\n",
+       "98  0.380424  3.309379\n",
+       "99  0.725294  4.724287\n",
+       "\n",
+       "[100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(X, columns=['X'])\n",
+    "df\n",
+    "df[\"Y\"] = Y\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "a862e560-9dd2-4ab5-9feb-4a3e6e4578c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sklearn\n",
+      "  Downloading sklearn-0.0.post12.tar.gz (2.6 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m \u001b[31m[15 lines of output]\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
+      "  \u001b[31m   \u001b[0m rather than 'sklearn' for pip commands.\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m Here is how to fix this error in the main use cases:\n",
+      "  \u001b[31m   \u001b[0m - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
+      "  \u001b[31m   \u001b[0m - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
+      "  \u001b[31m   \u001b[0m   (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
+      "  \u001b[31m   \u001b[0m - if the 'sklearn' package is used by one of your dependencies,\n",
+      "  \u001b[31m   \u001b[0m   it would be great if you take some time to track which package uses\n",
+      "  \u001b[31m   \u001b[0m   'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
+      "  \u001b[31m   \u001b[0m - as a last resort, set the environment variable\n",
+      "  \u001b[31m   \u001b[0m   SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
+      "  \u001b[31m   \u001b[0m \n",
+      "  \u001b[31m   \u001b[0m More information is available at\n",
+      "  \u001b[31m   \u001b[0m https://github.com/scikit-learn/sklearn-pypi-package\n",
+      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
+      "\n",
+      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
+      "\u001b[31m╰─>\u001b[0m See above for output.\n",
+      "\n",
+      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
+      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
+      "\u001b[?25hNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "f11ee672-f2d6-44b4-909c-1b3d7f4d388a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PG 75s"
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "4877ce16-1a84-41d3-b8d1-7caf07c7c0f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4],\n",
+       "       [5]])"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# X = np.array([2,4,2,1,5])\n",
+    "X= np.arange(1,6)\n",
+    "X = X.reshape(-1,1)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "92be9c45-d172-4aa1-a603-bab89ff1e1a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4, 5, 4, 5])"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = np.array([2,4,5,4,5])\n",
+    "Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "c27aec92-30f9-40c7-829e-1555708c2336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LinearRegression().fit(X,Y)\n",
+    "\n",
+    "slope = model.coef_\n",
+    "interecept = model.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "d8a90424-9106-41fb-8cbf-1a5418a56288",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[1],\n",
+       "        [2],\n",
+       "        [3],\n",
+       "        [4],\n",
+       "        [5]]),\n",
+       " array([2, 4, 5, 4, 5]))"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X, Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "362543dd-8e58-456d-9b24-2646a5653423",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OLS for slope \n",
+    "\n",
+    "def slope_ols(X, Y):\n",
+    "    n = len(X)\n",
+    "    mean_x = np.mean(X)\n",
+    "    mean_y = np.mean(Y)\n",
+    "    numinator = sum((X - mean_x) * (Y- mean_y))\n",
+    "    denominator = sum((X - mean_x)**2)\n",
+    "    slope_ols = numinator/denominator\n",
+    "    return slope_ols\n",
+    "\n",
+    "# Calculate slope using OLS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "3277fa20-f452-4267-aa58-55539758eb1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   X  Y\n",
+       "0  1  2\n",
+       "1  2  4\n",
+       "2  3  5\n",
+       "3  4  4\n",
+       "4  5  5"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(X, columns=[\"X\"])\n",
+    "df[\"Y\"] = Y\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "245912ed-b81d-41f5-b2dc-c6811bde7ac7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df['var'] = np.var(X)\n",
+    "df['mean_x'] = np.mean(X)\n",
+    "df['l'] = len(X)\n",
+    "df[\"numinator\"] = df[\"mean_x\"]**2\n",
+    "df[\"denominator\"] = (np.sum(df['X']- df['mean_x'])**2)\n",
+    "df[\"SEB0\"] = df[\"var\"]*((1/df['l'])+ df[\"numinator\"]/df[\"denominator\"])\n",
+    "df[\"SEB1\"] = df[\"var\"]/df[\"denominator\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "842a333f-a646-4466-a02e-786576aa4611",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>var</th>\n",
+       "      <th>mean_x</th>\n",
+       "      <th>l</th>\n",
+       "      <th>numinator</th>\n",
+       "      <th>denominator</th>\n",
+       "      <th>SEB0</th>\n",
+       "      <th>SEB1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   X  Y  var  mean_x  l  numinator  denominator  SEB0  SEB1\n",
+       "0  1  2  2.0     3.0  5        9.0          0.0   inf   inf\n",
+       "1  2  4  2.0     3.0  5        9.0          0.0   inf   inf\n",
+       "2  3  5  2.0     3.0  5        9.0          0.0   inf   inf\n",
+       "3  4  4  2.0     3.0  5        9.0          0.0   inf   inf\n",
+       "4  5  5  2.0     3.0  5        9.0          0.0   inf   inf"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "927f410d-a4ba-4638-a88d-2d3b21e65318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_B0(X):\n",
+    "    var = np.var(X)\n",
+    "    mean_x = np.mean(X)\n",
+    "    l = len(X)\n",
+    "    numinator = (1 + mean_x**2*l)\n",
+    "    denominator = l*(np.sum(X- mean_x)**2)\n",
+    "    return var*(numinator/denominator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "70aa97f1-65c6-487b-8d73-6e887e776358",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/dl/fs3rtgqs43zg1211vq1ps_600000gn/T/ipykernel_86298/3978852644.py:7: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  return var*(numinator/denominator)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_B0(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1afb80e7-cd69-401f-82d8-3ba6bb7efaaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standard error continue SE"
    ]
   }
  ],
