--- a/Ch-3.1.ipynb
+++ b/Ch-3.1.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 204,
    "id": "0e79c9c4-c2be-4177-81c9-a1117cde6a19",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 213,
    "id": "35ed1833-f523-4e97-8246-ef9f42578123",
    "metadata": {},
    "outputs": [],
@@ -53,12 +53,23 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as st"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 206,
+   "id": "b7a0a8d9-b2de-438f-9b52-aba0fd68cc14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
    "id": "269a8566-bed8-420c-87fc-c284a0d9a136",
    "metadata": {},
    "outputs": [],
@@ -71,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 208,
    "id": "1cfe2df9-c396-4607-a146-77596a3c2e08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x16dd83350>"
+       "<matplotlib.collections.PathCollection at 0x17f9bf110>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 209,
    "id": "2ad281a7-8631-402e-b894-683519bb5bf5",
    "metadata": {},
    "outputs": [
@@ -125,6 +136,27 @@
     "ax.scatter(X,Y, alpha= 0.7, s = 60, edgecolors=\"k\")\n",
     "slope, intercept = np.polyfit(X, Y, deg=1)\n",
     "ax.plot(X, slope*X+ intercept, lw = \"2.5\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "acc6c109-3974-4548-a3ba-e4cb3c6770de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.028848703843126218"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.sem(X)"
    ]
   },
   {
@@ -307,57 +339,6 @@
     "df\n",
     "df[\"Y\"] = Y\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "id": "a862e560-9dd2-4ab5-9feb-4a3e6e4578c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting sklearn\n",
-      "  Downloading sklearn-0.0.post12.tar.gz (2.6 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[15 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
-      "  \u001b[31m   \u001b[0m rather than 'sklearn' for pip commands.\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m Here is how to fix this error in the main use cases:\n",
-      "  \u001b[31m   \u001b[0m - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
-      "  \u001b[31m   \u001b[0m - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
-      "  \u001b[31m   \u001b[0m   (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
-      "  \u001b[31m   \u001b[0m - if the 'sklearn' package is used by one of your dependencies,\n",
-      "  \u001b[31m   \u001b[0m   it would be great if you take some time to track which package uses\n",
-      "  \u001b[31m   \u001b[0m   'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
-      "  \u001b[31m   \u001b[0m - as a last resort, set the environment variable\n",
-      "  \u001b[31m   \u001b[0m   SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m More information is available at\n",
-      "  \u001b[31m   \u001b[0m https://github.com/scikit-learn/sklearn-pypi-package\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
-      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
-      "\u001b[?25hNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install sklearn"
    ]
   },
   {
@@ -717,42 +698,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 223,
    "id": "70aa97f1-65c6-487b-8d73-6e887e776358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.random.choice(30,10)\n",
+    "a = data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "1afb80e7-cd69-401f-82d8-3ba6bb7efaaf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dl/fs3rtgqs43zg1211vq1ps_600000gn/T/ipykernel_86298/3978852644.py:7: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  return var*(numinator/denominator)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "inf"
+       "(8.497273474373193, 23.502726525626805)"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculate_B0(X)"
+    "# st.t.interval(alpha = 0.5, df = len(data)-1, loc = np.mean(data), scale = st.sem(data))\n",
+    "st.t.interval(0.95, len(a)-1, loc=np.mean(a), scale=st.sem(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "7e7caf7d-e2ae-432b-b34a-4d4dbc50313a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "rv_generic.interval() missing 1 required positional argument: 'confidence'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[222], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m st\u001b[38;5;241m.\u001b[39mt\u001b[38;5;241m.\u001b[39minterval(alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.95\u001b[39m, df\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(data)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, loc\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mmean(data), scale\u001b[38;5;241m=\u001b[39mst\u001b[38;5;241m.\u001b[39msem(data))\n",
+      "\u001b[0;31mTypeError\u001b[0m: rv_generic.interval() missing 1 required positional argument: 'confidence'"
+     ]
+    }
+   ],
+   "source": [
+    "st.t.interval(alpha=0.95, df=len(data)-1, loc=np.mean(data), scale=st.sem(data))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1afb80e7-cd69-401f-82d8-3ba6bb7efaaf",
+   "id": "cc71eb9a-a0d9-41b4-a0da-427aaa7401eb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "standard error continue SE"
-   ]
+   "source": []
   }
  ],
  "metadata": {
