--- a/Ch-3.1.ipynb
+++ b/Ch-3.1.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 227,
    "id": "35ed1833-f523-4e97-8246-ef9f42578123",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 228,
    "id": "269a8566-bed8-420c-87fc-c284a0d9a136",
    "metadata": {},
    "outputs": [],
@@ -78,6 +78,70 @@
     "X = rng.random(100)\n",
     "e = rng.standard_normal(100)\n",
     "Y = 2 + 3*X + e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "b10121a7-a0a8-4cd7-87d5-2d0fffa18480",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.51182162, 0.9504637 , 0.14415961, 0.94864945, 0.31183145,\n",
+       "       0.42332645, 0.82770259, 0.40919914, 0.54959369, 0.02755911,\n",
+       "       0.75351311, 0.53814331, 0.32973172, 0.7884287 , 0.30319483,\n",
+       "       0.45349789, 0.1340417 , 0.40311299, 0.20345524, 0.26231334,\n",
+       "       0.75036467, 0.28040876, 0.48519097, 0.9807372 , 0.96165719,\n",
+       "       0.72478994, 0.54122686, 0.2768912 , 0.16065201, 0.96992541,\n",
+       "       0.51606859, 0.11586561, 0.62348976, 0.77668311, 0.6130033 ,\n",
+       "       0.9172977 , 0.03959288, 0.52858926, 0.45933588, 0.06234958,\n",
+       "       0.64132817, 0.85263284, 0.59294102, 0.26009745, 0.83988152,\n",
+       "       0.50949588, 0.51088888, 0.75303021, 0.14792204, 0.81962672,\n",
+       "       0.68328691, 0.78709694, 0.19161626, 0.80236416, 0.19132393,\n",
+       "       0.08155262, 0.85522697, 0.8612835 , 0.8765371 , 0.47190972,\n",
+       "       0.27404839, 0.00709183, 0.6457209 , 0.71990938, 0.83556922,\n",
+       "       0.28187783, 0.21521817, 0.63933138, 0.80505483, 0.96367087,\n",
+       "       0.15052483, 0.48221239, 0.89471586, 0.42271691, 0.58950206,\n",
+       "       0.02449068, 0.67345989, 0.91908862, 0.82682533, 0.88552027,\n",
+       "       0.66035538, 0.24555227, 0.768517  , 0.21167474, 0.83127483,\n",
+       "       0.06271792, 0.82548781, 0.16450727, 0.375147  , 0.31673817,\n",
+       "       0.69133704, 0.17857188, 0.39625616, 0.0058246 , 0.26249471,\n",
+       "       0.42118881, 0.10592124, 0.63315995, 0.38042427, 0.72529394])"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "177e3f5c-9f3f-4c47-877b-1b16c8e35a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.08239252362941211, 100, 0.0008239252362941212)"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# STANDARD ERROR\n",
+    "# SD / n \n",
+    "\n",
+    "np.var(X), len(X), np.var(X)/len(X)"
    ]
   },
   {
@@ -731,24 +795,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 226,
    "id": "7e7caf7d-e2ae-432b-b34a-4d4dbc50313a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "rv_generic.interval() missing 1 required positional argument: 'confidence'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[222], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m st\u001b[38;5;241m.\u001b[39mt\u001b[38;5;241m.\u001b[39minterval(alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.95\u001b[39m, df\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(data)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, loc\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mmean(data), scale\u001b[38;5;241m=\u001b[39mst\u001b[38;5;241m.\u001b[39msem(data))\n",
-      "\u001b[0;31mTypeError\u001b[0m: rv_generic.interval() missing 1 required positional argument: 'confidence'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "st.t.interval(alpha=0.95, df=len(data)-1, loc=np.mean(data), scale=st.sem(data))"
+    "# st.t.interval(alpha=0.95, df=len(data)-1, loc=np.mean(data), scale=st.sem(data))"
    ]
   },
   {
