--- a/3.3 Standard Error.ipynb
+++ b/3.3 Standard Error.ipynb
@@ -16,13 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d3182fdf-825f-4cc7-a9fe-97f413d43e35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Standard Error\n",
-    "# Standar error tell you the how accurate is sample mean from the population mean"
+    "# t-statistics\n",
+    "# Residual Standard Error\n",
+    "# R ^2 are using in accessing the accuracy of the model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b8c6ae7-9814-46a6-8032-a4f78d036343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Residual Standard Error\n",
+    "# RSE provides an absolute measure of lack of fit of the model. \n",
+    "# Total Sum of Square \n",
+    "# R^2 is the measure of the linear relationship between X an Y. "
    ]
   },
   {
